# systematic_trading

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BOOK_QUICKSTART.md  DEVELOPERS_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP.md  SYSTEMATIC_TRADING_BOOK.md  main.py  pyproject.toml  pytest.ini  requirements.txt  test_new_features.py
.claude/: settings.local.json
backtesting/: __init__.py  backtest_engine.py  performance.py
book/: CONTRIBUTING.md  FRAMEWORK_SUMMARY.md  Makefile  README.md  VISUAL_STRUCTURE.txt  _config.yml  _toc.yml  intro.md  requirements.txt  setup_book.sh
book/appendix/: code_reference.md
book/part1/: 01_what_is_systematic_trading.ipynb  02_understanding_stock_markets.ipynb  03_why_manual_trading_fails.ipynb  overview.md
book/part2/: 04_trend_following.ipynb  05_understanding_volatility.ipynb  overview.md
book/part3/: overview.md
book/part4/: 11_understanding_results.ipynb
config/: __init__.py  settings.py
data/: __init__.py  data_manager.py
execution/: __init__.py  execution_engine.py  mock_broker.py  order.py
notebooks/: 00_complete_trading_workflow.ipynb  README.md
risk_management/: __init__.py  drawdown_manager.py  portfolio_optimizer.py  position_sizer.py
strategy/: __init__.py  base_strategy.py  breakout.py  carry.py  mean_reversion.py  momentum.py  trend_following.py
tests/: __init__.py  test_calculations.py  test_position_sizer.py  test_strategy.py
utils/: __init__.py  calculations.py  logger.py
(+99 files in other folders)
