[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "systematic_trading"
version = "0.1.0"
description = "A data analysis and visualization project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    # Data and Analysis
    "yfinance>=0.2.60",
    "pandas>=2.2.0",
    "numpy>=2.2.0",
    "scipy>=1.16.0",
    # Visualization
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    # Configuration
    "python-dotenv>=1.2.0",
    # Utilities
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
    # Notebooks
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "ipywidgets>=8.1.8",
    # testing
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0"
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.setuptools.packages.find]
include = [
    "strategy",
    "execution",
    "backtesting",
    "risk_management",
    "config",
    "data",
    "book",
    "notebooks"
]